Beta enhancements: 1) relocate bulletin.css; 2) Add button to duplicate subtitle in excerpt; 3) Correct spacing under underline in text bulletin; 4) Change <ul> type to circle in text bulletin.

--- a/_css/bulletin.css
+++ b/_css/bulletin.css
@@ -1,17 +1,27 @@
+h3 {
+	margin-bottom:0;
+	color:black;	
+/*	letter-spacing: .15em;*/
+	font-family:Calibri,Arial,Verdana,sans-serif;
+	text-transform:uppercase;
+}
 h4 {
 	margin-bottom:0;
 	color:black;	
+	font-family:Calibri,Arial,Verdana,sans-serif;
+	font-size:1.1em;
 }
 .OtherOrgs {
 	font-size: 1em;
 	font-weight: bold;
 	text-transform: uppercase;
 }
-#wbHeader ol {
-	list-style:none;
-	margin-left:0;
-}
 #wbHeader ol li {
 	margin-bottom: .5em;
 	font-weight: bold;
-	margin-left:0;
+/*	line-height:1em;*/
+}
+#wbHeader ol  {
+	list-style:none;
+	margin-left:-2em;  /* offset default */
+}
